--- a/bootstrap/css/bootstrap_style.css
+++ b/bootstrap/css/bootstrap_style.css
@@ -77,7 +77,7 @@
 .p_contenu{
   margin-top: 20px;
   margin-left: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   padding: 5px 20px;
   color: black;
@@ -161,11 +161,70 @@
 
 }
 */
+h2{
+  color:#4fb2f3;
+  font-size: 22px;
+  font-weight: bold;
+}
   input{
     text-align: center;
     width: 32%;
+    height: 80px;
     margin: 4px;
   }
+    button{
+      text-align: center;
+      width: 32%;
+      margin: 0px;
+    }
+    .input_titre_0{
+      background-color: #ffd3d3;
+      color:#4fb2f3;
+      font-size: 16px;
+      border: none;
+      border:2px solid #4fb2f3;
+      box-sizing: border-box;
+    }
+    .input_titre{
+      background-color: #4fb2f3;
+      color:white;
+      font-size: 16px;
+      border: none;
+      border:2px solid white;
+      box-sizing: border-box;
+    }
+    .input_titre_2{
+      background-color: white;
+      color:#4fb2f3;
+      font-size: 16px;
+      border: none;
+      border:2px solid #4fb2f3;
+      box-sizing: border-box;
+    }
+    .input_titre_3{
+      background-color: white;
+      color:#4fb2f3;
+      font-size: 16px;
+      border: none;
+      border:2px solid #4fb2f3;
+      box-sizing: border-box;
+    }
+    .input_titre_4{
+      background-color:#cfffc9;
+        color:#4fb2f3;
+      font-size: 16px;
+      border: none;
+      border:2px solid #4fb2f3;
+      box-sizing: border-box;
+    }
+    [placeholder] {
+      background-color: #ffd3d3;
+      font-size: 16px;
+    }
+    ::-webkit-input-placeholder {color: white;}
+    :-moz-placeholder { /* Firefox 18- */color: white;}
+    ::-moz-placeholder {  /* Firefox 19+ */color: white;}
+    :-ms-input-placeholder {color: white;}
 @media all and (max-width: 768px)
 {
   .p_g{
@@ -179,6 +238,11 @@
       width: 33%;
       margin: 0px;
     }
+      button{
+        text-align: center;
+        width: 30%;
+        margin: 0px;
+      }
 }
 @media all and (max-width: 991px)
 {
@@ -191,4 +255,9 @@
       width: 30%;
       margin: 2px;
     }
+      button{
+        text-align: center;
+        width: 30%;
+        margin: 2px;
+      }
 }
